Funcionalidade: Implementação de serviço meteorológico com integração de API
- Adicionado o WeatherClient para obter dados meteorológicos atuais e de previsão de uma API externa.

- Criado o WeatherController para lidar com solicitações de dados meteorológicos atuais, de previsão e completos.

- Introduzidos DTOs para representação de dados meteorológicos: CurrentWeatherDTO, ForecastDTO, WeatherApiResponse, WeatherRequestDTO e WeatherResponseDTO.

- Desenvolvido o WeatherMapper para converter respostas da API em DTOs internos.

- Implementada a interface WeatherService e sua implementação para lógica de negócios e cache.

- Adicionado cache para recuperação de dados meteorológicos para otimizar o desempenho.

- Configurado o Docker Compose para os serviços de backend e frontend com banco de dados PostgreSQL.

- Criado o Dockerfile para o processo de build do frontend.

- Adicionados o arquivo .dockerignore e um arquivo de ambiente de exemplo para a configuração do frontend.